--- a/home/config/latte/gentoo-3-docks_v0.2.layout.latte
+++ b/home/config/latte/gentoo-3-docks_v0.2.layout.latte
@@ -57,7 +57,7 @@ PreloadWeight=0
 [Containments][1][Applets][67][Configuration][General]
 isInLatteDock=true
 isPreferredForDroppedLaunchers=false
-launchers59=applications:org.kde.dolphin.desktop,applications:terminator.desktop,applications:code.desktop,applications:org.kde.kate.desktop,applications:chromium-browser-chromium.desktop,applications:vivaldi-snapshot.desktop,applications:org.remmina.Remmina.desktop,applications:com.github.wwmm.pulseeffects.desktop,applications:kitty.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:org.kde.kate.desktop,applications:code.desktop,applications:terminator.desktop,applications:chromium-browser-chromium.desktop,applications:vivaldi-snapshot.desktop,applications:org.remmina.Remmina.desktop,applications:com.github.wwmm.pulseeffects.desktop,applications:kitty.desktop
 manualScrollTasksType=Disabled
 showOnlyCurrentActivity=false
 
@@ -160,7 +160,7 @@ immutability=1
 plugin=org.kde.plasma.systemmonitor
 
 [Containments][22][Applets][130][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][22][Applets][130][Configuration][Appearance]
 chartFace=org.kde.ksysguard.linechart
@@ -187,7 +187,7 @@ immutability=1
 plugin=org.kde.plasma.systemmonitor
 
 [Containments][22][Applets][131][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][22][Applets][131][Configuration][Appearance]
 chartFace=org.kde.ksysguard.barchart
@@ -221,7 +221,7 @@ immutability=1
 plugin=org.kde.plasma.systemmonitor
 
 [Containments][22][Applets][132][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][22][Applets][132][Configuration][Appearance]
 chartFace=org.kde.ksysguard.linechart
@@ -248,7 +248,7 @@ immutability=1
 plugin=org.kde.plasma.systemmonitor
 
 [Containments][22][Applets][133][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][22][Applets][133][Configuration][Appearance]
 chartFace=org.kde.ksysguard.linechart
@@ -658,6 +658,10 @@ plugin=org.kde.plasma.networkmanagement
 
 [Containments][93][Applets][104][Configuration]
 PreloadWeight=0
+
+[Containments][93][Applets][145]
+immutability=1
+plugin=org.kde.plasma.mediacontroller
 
 [Containments][93][Applets][94]
 immutability=1
